Add debug output to Jira evidence workflow by displaying all commit messages

--- a/.github/workflows/create-jira-evidence.yaml
+++ b/.github/workflows/create-jira-evidence.yaml
@@ -275,6 +275,8 @@ jobs:
           echo "Commit ranges:"
           jq . commit_ranges.json
 
+          cat all_commit_messages.txt
+
       - name: Extract Jira issue keys from commit diff
         id: extract-jira-keys
         run: |
