Refactor Jira keys handling in workflow to improve parsing by using IFS for splitting keys

--- a/.github/workflows/create-jira-evidence.yaml
+++ b/.github/workflows/create-jira-evidence.yaml
@@ -302,8 +302,8 @@ jobs:
           JIRA_ISSUES="[]"
 
           KEYS=$(cat jira_keys.txt)
+          IFS=';' read -ra KEYS <<< "${KEYS}"
           for KEY in "${KEYS[@]}"; do
-            KEY=$(echo "$KEY" | xargs)
             [ -z "$KEY" ] && continue
             echo "KEY=$KEY"
 
