--- a/.github/workflows/create-jira-evidence.yaml
+++ b/.github/workflows/create-jira-evidence.yaml
@@ -305,8 +305,10 @@ jobs:
           IFS=';' read -ra KEYS <<< "${KEYS}"
           for KEY in "${KEYS[@]}"; do
             [ -z "$KEY" ] && continue
-            echo "KEY=$KEY:jira key to retrieve"
-
+            echo "KEY=$KEY"
+            echo "JIRA_BASE_URL=$JIRA_BASE_URL"
+            echo "AUTH=$AUTH"
+            
             RESPONSE=$(curl -sf \
               -H "Authorization: Basic ${AUTH}" \
               -H "Content-Type: application/json" \
