--- a/.github/workflows/create-jira-evidence.yaml
+++ b/.github/workflows/create-jira-evidence.yaml
@@ -20,7 +20,7 @@ permissions:
 
 jobs:
   create-jira-evidence:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout
         uses: actions/checkout@v4
